--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Vite App</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
